render todo finished

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../node_modules/basiclightbox/dist/basicLightbox.min.css" />
     <title>ToDo App JavaScript</title>
   </head>
   <body>
+
+    <div class="container">
+      <h1>Todo App</h1>
+    </div>
     
     <include src="./partials/created-todo.html"></include>
     <include src="./partials/active-notes-table.html"></include>
