--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,23 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../node_modules/basiclightbox/dist/basicLightbox.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <title>ToDo App JavaScript</title>
   </head>
   <body>
 
     <div class="container">
-      <h1>Todo App</h1>
+      <h1 class="center">Todo App</h1>
     </div>
     
     <include src="./partials/created-todo.html"></include>
     <include src="./partials/active-notes-table.html"></include>
-    <include src="./partials/archived-notes-table.html"></include>
     <include src="./partials/all-notes-table.html"></include>
+    <include src="./partials/archived-notes-table.html"></include>
 
     <script src="./index.js"></script>
   </body>
